--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -15,15 +15,15 @@ button,
 	cursor: pointer !important;
 	display: inline-block;
 	font-weight: _font(weight-extrabold);
-	height: _size(element-height) / 0.7;
-	line-height: _size(element-height) / 0.7;
-	padding: 0 3em;
+	height: auto;
+	line-height: 1.2;
+	padding: 0.5em 1.5em;
 	text-align: center;
 	text-decoration: none;
 	white-space: nowrap;
 	letter-spacing: _font(letter-spacing-heading);
 	text-transform: uppercase;
-	font-size: 0.7em;
+	font-size: 0.8em;
 
 	&.icon {
 		&:before {
@@ -36,25 +36,64 @@ button,
 	}
 
 	&.small {
-		font-size: 0.6em;
+		font-size: 0.7em;
+		padding: 0.4em 1.2em;
 	}
 
 	&.large {
 		font-size: 1em;
 	}
-	&#contest-btn .small {
-		color: #fff;
-		font-size: 1.25em; /* Increase font size */
-		padding: 0.25em 0.75em; /* Adjust padding to maintain button size */
-		line-height: 1; /* Ensure text is vertically centered */
-		display: inline-block; /* Helps with vertical alignment */
-		box-sizing: border-box; /* Includes padding in element's total width and height */
+	&#contest-btn.small {
+		font-size: 0.9em;
+		padding: 0.4em 1em;
+		line-height: 1.2;
+		height: auto;
+		min-height: 2.5em;
+		display: inline-flex;
+		align-items: center;
+		justify-content:center;
 	}
 
 	&.disabled,
 	&:disabled {
 		@include vendor('pointer-events', 'none');
 		opacity: 0.25;
+	}
+	@media (max-width: 480px) {
+		input[type='submit'],
+		input[type='reset'],
+		input[type='button'],
+		button,
+		.button {
+			font-size: 0.7em;
+			padding: 0.4em 1em;
+
+			&#contest-btn.small {
+				font-size: 0.8em;
+				padding: 0.3em 0.8em;
+				min-height: 2.2em;
+				margin-top: -2px;
+				margin-bottom: 0;
+				align-self: bottom;
+			}
+		}
+	}
+	@media (min-width: 481px) and (max-width: 768px) {
+		input[type='submit'],
+		input[type='reset'],
+		input[type='button'],
+		button,
+		.button {
+			font-size: 0.75em;
+			padding: 0.45em 1.2em;
+
+			&#contest-btn.small {
+				font-size: 0.85em;
+				padding: 0.35em 0.9em;
+				min-height: 2.3em;
+				align-self: center;
+			}
+		}
 	}
 }
 
@@ -72,8 +111,8 @@ button,
 			#7183cd,
 			#eb8585
 		);
-		background-size: 500%; // Adjusted to allow the gradient to move fully across
-		animation: background-animation 5s linear infinite alternate; // Removed alternate-reverse for smooth looping
+		background-size: 500%;
+		animation: background-animation 5s linear infinite alternate;
 		box-shadow: inset 0 0 0 1px _palette($p, border);
 		color: _palette($p, 'border1') !important;
 
@@ -99,8 +138,6 @@ button,
 				}
 			}
 			@include vendor('animation', 'pulse 1s ease-in-out infinite');
-			// @include vendor('transition', 'transform 0.2s ease-in-out');
-			// @include vendor('transform', 'scale(1.05)');
 		}
 
 		&:active {
@@ -115,7 +152,6 @@ button,
 				&:hover {
 					box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1),
 						-10px -10px 1-px, #618f97;
-					// background-color: lighten(_palette(accent1, 'bg'), 5);
 				}
 
 				&:active {
@@ -125,13 +161,9 @@ button,
 		} @else {
 			&.primary {
 				box-shadow: 0 0 3em 0 _palette(shadow);
-				// background-color: saturate(darken(_palette($p, bg), 5), 3);
-				// color: _palette($p, fg-bold) !important;
 
 				&.primary1 {
 					box-shadow: 0 0 3em 0 _palette(shadow);
-					// background-color: saturate(lighten(_palette($p, bg), 5), 3);
-					// color: _palette($p, 'fg') !important;
 
 					&:hover {
 						background-color: saturate(
