--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4626,7 +4626,10 @@ article {
     margin-right: 0.5em;
   }
   #header > nav ul li a[href="#menu"]:before {
-    content: none;
+    content: "\f0c9";
+    float: right;
+    line-height: inherit;
+    margin-right: 0.75em;
   }
   #header > nav ul li a[href="#menu"] i {
     display: inline-block;
