--- a/assets/sass/components/_achievements.scss
+++ b/assets/sass/components/_achievements.scss
@@ -43,7 +43,7 @@ h3 {
 }
 
 article {
-	background-color: #f8f8f8;
+	background-color: #fff;
 	border-radius: 8px;
 	padding: 20px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -69,7 +69,7 @@ article {
 }
 
 .list-group li {
-	width: calc(50% - 10px);
+	width: calc(60% - 10px);
 	margin-bottom: 10px;
 	padding: 10px;
 	border-radius: 4px;
