--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -1,20 +1,30 @@
-#main .fa-solid .fa-spinner p {
-	width: 80%;
+#main p {
+	width: 100%;
+	text-align: center;
 }
 
 #main .fa-solid.fa-apple-whole {
-	margin-right: 10px; /* Adjust this value as needed */
+	margin-right: 10px;
+	margin-bottom: 1em;
 }
 
 #main .fa-solid.fa-apple-whole + p:first-letter {
 	display: block;
 	color: #cb1318;
 	font-size: 28px;
-	margin-block-start: 8px;
-	text-shadow: 0px 2px 5px #eeeeee;
+	margin-block-start: 10px;
 	line-height: 0.7;
 }
 
 li::marker {
 	content: none;
+}
+
+@include breakpoint('<=xsmall') {
+	@media screen and (max-width: 480px) {
+		@include vendor('flex-direction', 'column');
+		li::marker {
+			content: none;
+		}
+	}
 }
