--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -22,9 +22,31 @@ li::marker {
 
 @include breakpoint('<=xsmall') {
 	@media screen and (max-width: 480px) {
-
 		li::marker {
 			content: none;
 		}
+	}
+	ul li,
+	ol li {
+		list-style-type: none;
+	}
+	ul,
+	ol {
+		padding-left: 0;
+	}
+}
+@include breakpoint('<=small') {
+	@media screen and (max-width: 768px) {
+		li::marker {
+			content: none;
+		}
+	}
+	ul li,
+	ol li {
+		list-style-type: none;
+	}
+	ul,
+	ol {
+		padding-left: 0;
 	}
 }
